# CG2023

./: .gitignore  CMakeLists.txt  README.md  box_2_3.3d  generator
Phase3Grupo3/: engine  generator
Phase3Grupo3/demo/: solar_system_moons.xml
Phase3Grupo3/models/: box.3d  plane.3d  sphere_1_8_8.3d
Phase3Grupo3/scripts/: asteroid.py  asteroid_test  generate_xml_files  helper.py  hour_to_time.py  planet_dist  (+2 more)
models/: bezier_10.3d  box.3d  box_2_3.3d  cone.3d  cone_1_2_4_3.3d  cylinder.3d  plane.3d  plane_2_3.3d  sphere.3d  sphere2.3d  sphere_1_8_8.3d  teapot.3d  torus.3d
moon_docs/: change_scale.py  generate_xml_files  jupyter_moons.xml  planet_dist  planet_size  saturn_moons.xml  size_to_sun.py  text_to_moon.py  uranus_moons.xml
patches/: asteroid.patch  deeznuts.py  putCommas.py  rawAsteroid.txt
reports/: Rel_CG_01.tex  Rel_CG_02.tex  Rel_CG_03.tex  Rel_CG_04.tex
scripts/: asteroid  asteroid.py  asteroid_belt  asteroid_belt.py  change_scale.py  foo.py  jupyter_moons  jupyter_moons.xml  mars_moons  mars_moons.xml  neptune_moons  saturn_moons  saturn_moons.xml  size_to_sun.py  text_to_moon.py  time_translation  uranus_moons
xml_files/: box.xml  cone.xml  cylinder.xml  earth.xml  phase1.xml  phase2_1.xml  phase2_2.xml  plane.xml  solar_sistem.xml  solar_system.xml  solar_system_moons.xml  solar_system_moons_windows.xml  sphere.xml  teapot.xml  teapot_windows.xml  test_1_1.xml  test_1_2.xml  test_1_3.xml  test_1_4.xml  test_1_5.xml  test_2_1.xml  test_2_2.xml  test_2_3.xml  test_2_4.xml  test_3_1.xml  test_3_1_sem_bezier_windows.xml  test_3_2.xml  torus.xml
(+58 files in other folders)
